syntax = "proto3";

package auth;
option go_package ="./auth";

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    string userId = 1;
    string name = 2;
    string email = 3;
    bool isAdmin = 4;
}

service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}
